--- a/package.json
+++ b/package.json
@@ -1,17 +1,21 @@
 {
-	"name": "leetmates",
-    "private": true,
-    "scripts": {
-        "build": "turbo run build",
-        "dev": "turbo run dev",
-        "lint": "turbo run lint"
-    },
-    "devDependencies": {
-        "turbo": "^2.1.3"
-    },
-    "packageManager": "npm@10.0.0",
-    "workspaces": [
-        "apps/*",
-        "packages/*"
-    ]
+  "name": "leetmates",
+  "private": true,
+  "scripts": {
+    "build": "turbo run build",
+    "build:web": "npm run build --workspace=@leetmates/web",
+    "uninstall:web": "npm uninstall --workspace=@leetmates/web",
+    "install:web": "npm install --workspace=@leetmates/web",
+    "dev:web": "npm run dev --workspace=@leetmates/web",
+    "dev": "turbo run dev",
+    "lint": "turbo run lint"
+  },
+  "devDependencies": {
+    "turbo": "^2.1.3"
+  },
+  "packageManager": "npm@10.0.0",
+  "workspaces": [
+    "apps/*",
+    "packages/*"
+  ]
 }
