--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "prepare": "husky"
   },
   "lint-staged": {
-    "apps/web/**/*.{js,jsx,ts,tsx}": "eslint --fix"
+    "apps/web/**/*.{js,jsx,ts,tsx}": "eslint --fix",
+    "*.{js,jsx,ts,tsx,json,css,md}": "prettier --write"
   },
   "devDependencies": {
     "husky": "^9.1.6",
