--- a/apps/web/components.json
+++ b/apps/web/components.json
@@ -14,6 +14,7 @@
     "components": "~/components",
     "utils": "~/lib/utils",
     "ui": "~/components/ui",
+    "public": "~/public",
     "lib": "~/lib",
     "hooks": "~/hooks"
   }
