--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "20": "^3.1.9",
     "@monaco-editor/react": "^4.6.0",
+    "@prisma/client": "^5.21.1",
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-select": "^2.1.2",
@@ -25,6 +26,7 @@
     "clsx": "^2.1.1",
     "isbot": "^4.1.0",
     "lucide-react": "^0.447.0",
+    "mongodb": "^6.9.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-markdown": "^9.0.1",
@@ -49,6 +51,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "postcss": "^8.4.47",
     "prettier": "^3.3.3",
+    "prisma": "^5.21.1",
     "tailwindcss": "^3.4.13",
     "typescript": "^5.1.6",
     "vite": "^5.1.0",
